# xero-rest-mcp

./: .gitignore  README.md  pyproject.toml
src/xero_rest_mcp/: __init__.py  server.py
